tests/NormalTests/paczka2/big_fuzzy/48737968.err
Error in line 1: ofl1O S802 60,3
Error in line 10: ofl1O S175 32,7
Error in line 12: Nz6fANqBJFP S175 55,0
Error in line 29: ofl1O S175 91,0
Error in line 38: ofl1O A873 41,4
Error in line 32: Nz6fANqBJFP A976 78,3
Error in line 48: NzfANqBJFP A873 -4,4
Error in line 57: Hhn A976 162,00
Error in line 58: Nz6fANqBJFP A976 26,22
Error in line 84: PHCNds3t A873 83,4
Error in line 102: ROtBK0bF Ah73 23,5
Error in line 115: ROtBK0bF A976 75,2
Error in line 122: Nz6fANqBJFP A976 132,8
Error in line 120: Hhn A976 48,1
Error in line 132: Nz6fANqBJFP A976 25,0
Error in line 133: Nz6fANqBJFP S802 83,5
Error in line 137: Nz6fANqBJFP S175 47,4
Error in line 152: Hhn A873 0,9
Error in line 153: A873 A873 15,7
Error in line 158: A873 A873 23,90
Error in line 157: A873 S802 10,3
Error in line 165: ofl1O S802 65,6
Error in line 166: ofl1O A976 64,2
Error in line 154: Hhn S802 35,0
Error in line 163: PHCNds3t S802 268,3
Error in line 170: Nz6fANqBJFP A873 363,6
Error in line 174: PHCNds3t A976 3,2
Error in line 177: jTT A873 20,0
Error in line 176: Hhn A873 25,6
Error in line 185: jTT A976 97,3
Error in line 192: Hhn S802 12,4
Error in line 197: ofl1O S175 27,9
Error in line 193: jTT A873 2,4
Error in line 220: ofl1O A976 57,0
Error in line 211: A873 A976 2,3
Error in line 223: ofl1O S175 -1,6
Error in line 222: A873 A873 23,8
Error in line 216: jTT A873 21,5
Error in line 221: ofl1O S175 13,5
Error in line 233: PHCNds3t S802 45,4
Error in line 244: A873 S175 73,6
